@@ -64,6 +64,8 @@ stdio_a_c_sources =	\
 	sscanf_p.c \
 	vfprintf_p.c \
 	vfscanf_p.c \
+	vprintf.c \
+	vscanf.c \
 	vsnprintf.c \
 	vsnprintf_p.c \
 	vsprintf.c \
